# plugwerk-server/plugwerk-server-backend/src/main/kotlin/io/plugwerk/server/controller/OidcProviderController.kt
@@ -152,7 +152,7 @@ class OidcProviderController(
         DomainType.GITHUB -> OidcProviderType.GITHUB
         DomainType.GOOGLE -> OidcProviderType.GOOGLE
         DomainType.FACEBOOK -> OidcProviderType.FACEBOOK
-        DomainType.OAUTH2_GENERIC -> OidcProviderType.OAUTH2_GENERIC
+        DomainType.OAUTH2 -> OidcProviderType.OAUTH2
     }
 
     private fun OidcProviderType.toDomain(): DomainType = when (this) {
@@ -160,6 +160,6 @@ class OidcProviderController(
         OidcProviderType.GITHUB -> DomainType.GITHUB
         OidcProviderType.GOOGLE -> DomainType.GOOGLE
         OidcProviderType.FACEBOOK -> DomainType.FACEBOOK
-        OidcProviderType.OAUTH2_GENERIC -> DomainType.OAUTH2_GENERIC
+        OidcProviderType.OAUTH2 -> DomainType.OAUTH2
     }
 }
